opam-version: "2.0"
authors: "Francois Berenger"
maintainer: "unixjunkie@sdf.org"
homepage: "https://github.com/UnixJunkie/linwrap"
bug-reports: "https://github.com/UnixJunkie/linwrap/issues"
dev-repo: "git+https://github.com/UnixJunkie/linwrap.git"
license: "BSD-3"
build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "base-unix"
  "batteries"
  "cpm"
  "dolog"
  "dune"
  "minicli"
  "parmap"
]
depexts: [
  ["liblinear-tools"] {os-family = "debian"}
]
synopsis: "Wrapper around liblinear-tools"
description: """
TODO
"""
# url {
#   src: "https://github.com/UnixJunkie/linwrap/archive/XXX.tar.gz"
#   checksum: "md5=YYY"
# }
